--- a/algorithm.html
+++ b/algorithm.html
@@ -1,162 +1,187 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+      user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-      user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body class="body-style">
+    <div class="news news-purple">
+      <div class="news-text">更新时间：</div>
+    </div>
 
-<body class="body-style">
-  <div class="news news-purple">
-    <div class="news-text">更新时间：</div>
-  </div>
-
-  <!-- navigation -->
-  <div class="navigation navigation-shadow">
-    <!-- 横版 -->
-    <div class="navigation-content navigation-content-unhome">
-
-      <div class="navigation-choice navigation-choice-unhome
-          navigation-black">
-        <a href="index.html" class="logo logo-black">
-          <div>Hu</div>
-        </a>
-        <a href="study-notes.html">
-          <div class="choice choice-study choice-focused
-              choice-focused-black">
-            学习笔记
-          </div>
-        </a>
-        <a href="skills.html">
-          <div class="choice choice-study">专业技能</div>
-        </a>
-        <a href="projects.html">
-          <div class="choice choice-study">项目经历</div>
-        </a>
-        <a href="about.html">
-          <div class="choice choice-study">关于本站</div>
-        </a>
-        <a href="https://github.com/zanlaihu" target="_blank">
-          <div class="github github-black"></div>
-        </a>
+    <!-- navigation -->
+    <div class="navigation navigation-shadow">
+      <!-- 横版 -->
+      <div class="navigation-content navigation-content-unhome">
+        <div
+          class="navigation-choice navigation-choice-unhome navigation-black"
+        >
+          <a href="index.html" class="logo logo-black">
+            <div>Hu</div>
+          </a>
+          <a href="study-notes.html">
+            <div
+              class="choice choice-study choice-focused choice-focused-black"
+            >
+              学习笔记
+            </div>
+          </a>
+          <a href="skills.html">
+            <div class="choice choice-study">专业技能</div>
+          </a>
+          <a href="projects.html">
+            <div class="choice choice-study">项目经历</div>
+          </a>
+          <a href="about.html">
+            <div class="choice choice-study">关于本站</div>
+          </a>
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <div class="github github-black"></div>
+          </a>
+        </div>
+        <div class="inner-header-icon inner-header-icon-unhome">
+          <span> </span>
+          <span> </span>
+        </div>
       </div>
-      <div class="inner-header-icon inner-header-icon-unhome">
-        <span> </span>
-        <span> </span>
+      <!-- 下拉 -->
+      <div class="dropdown">
+        <div class="dropdown-line dropdown-line-black"></div>
+        <div class="dropdown-menu dropdown-menu-black">
+          <a href="index.html">
+            <p>主页</p>
+          </a>
+          <hr />
+          <a href="study-notes.html">
+            <p>学习笔记</p>
+          </a>
+          <hr />
+          <a href="skills.html">
+            <p>专业技能</p>
+          </a>
+          <hr />
+          <a href="projects.html">
+            <p>项目经历</p>
+          </a>
+          <hr />
+          <a href="about.html">
+            <p>关于本站</p>
+          </a>
+          <hr />
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <p>GitHub</p>
+          </a>
+          <hr />
+        </div>
       </div>
     </div>
-    <!-- 下拉 -->
-    <div class="dropdown">
-      <div class="dropdown-line dropdown-line-black"></div>
-      <div class="dropdown-menu dropdown-menu-black">
-        <a href="index.html">
-          <p>主页</p>
-        </a>
-        <hr />
-        <a href="study-notes.html">
-          <p>学习笔记</p>
-        </a>
-        <hr />
-        <a href="skills.html">
-          <p>专业技能</p>
-        </a>
-        <hr />
-        <a href="projects.html">
-          <p>项目经历</p>
-        </a>
-        <hr />
-        <a href="about.html">
-          <p>关于本站</p>
-        </a>
-        <hr />
-        <a href="https://github.com/zanlaihu" target="_blank">
-          <p>GitHub</p>
-        </a>
-        <hr />
+
+    <div class="notes-navigate">
+      <a href="./study-notes.html">
+        <div class="notes-choice">
+          <div class="concept"></div>
+          <div>概念</div>
+        </div>
+      </a>
+      <a href="./algorithm.html">
+        <div class="notes-choice">
+          <div class="algorithm"></div>
+          <div style="color: #a26aec">算法</div>
+        </div>
+      </a>
+      <a href="./journal.html">
+        <div class="notes-choice">
+          <div class="journal"></div>
+          <div>日志</div>
+        </div>
+      </a>
+    </div>
+
+    <!-- full-index -->
+    <div class="full-index">
+      <div class="full-index-title"></div>
+      <div class="full-index-content">
+        <div class="single-content-title">LeetCode</div>
+        <div class="single-content">
+          <a href="" target="_blank">
+            <div>移动窗口法</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/算法/移动窗口/无重复字符的最长子串.js"
+            target="_blank"
+          >
+            <div>无重复字符的最长子串</div>
+          </a>
+        </div>
+        <div class="single-content">
+          <a>
+            <div>中心扩散法</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/算法/中心扩散法/最长回文子串.js"
+            target="_blank"
+          >
+            <div>最长回文子串</div>
+          </a>
+        </div>
+        <div class="single-content">
+          <a>
+            <div>双指针法</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/%E7%AE%97%E6%B3%95/%E5%8F%8C%E6%8C%87%E9%92%88%E6%B3%95/%E7%9B%9B%E6%9C%80%E5%A4%9A%E7%9A%84%E6%B0%B4.js"
+            target="_blank"
+          >
+            <div>盛最多水的容器</div>
+          </a>
+        </div>
+        <div class="single-content">
+          <a>
+            <div>Middle</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/算法/LeetCode/Middle/Z字形变换.js"
+            target="_blank"
+          >
+            <div>Z 字形变换</div>
+          </a>
+        </div>
+      </div>
+      <div class="full-index-content">
+        <div class="single-content-title">经典</div>
+        <div class="single-content">
+          <a>
+            <div>十大排序算法</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/算法/十大排序算法/快速排序.js"
+            target="_blank"
+          >
+            <div>快速排序</div>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="notes-navigate">
-    <a href="./study-notes.html">
-      <div class="notes-choice">
-        <div class="concept"></div>
-        <div>概念</div>
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaushu@outlook.com</div>
       </div>
-    </a>
-    <a href="./algorithm.html">
-      <div class="notes-choice">
-        <div class="algorithm"></div>
-        <div style="color: #a26aec;">算法</div>
-      </div>
-    </a>
-    <a href="./journal.html">
-      <div class="notes-choice">
-        <div class="journal"></div>
-        <div>日志</div>
-      </div>
-    </a>
-  </div>
-
-  <!-- full-index -->
-  <div class="full-index">
-    <div class="full-index-title"></div>
-    <div class="full-index-content">
-      <div class="single-content-title">LeetCode</div>
-      <div class="single-content">
-        <a href="" target="_blank">
-          <div>移动窗口法</div>
-        </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/移动窗口/无重复字符的最长子串.js" target="_blank">
-          <div>无重复字符的最长子串</div>
-        </a>
-      </div>
-      <div class="single-content">
-        <a>
-          <div>中心扩散法</div>
-        </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/中心扩散法/最长回文子串.js" target="_blank">
-          <div>最长回文子串</div>
-        </a>
-      </div>
-      <div class="single-content">
-        <a>
-          <div>Middle</div>
-        </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/LeetCode/Middle/Z字形变换.js" target="_blank">
-          <div>Z 字形变换</div>
-        </a>
-      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
-    <div class="full-index-content">
-      <div class="single-content-title">经典</div>
-      <div class="single-content">
-        <a>
-          <div>十大排序算法</div>
-        </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/十大排序算法/快速排序.js" target="_blank">
-          <div>快速排序</div>
-        </a>
-      </div>
-    </div>
-  </div>
 
-  <!-- bottom -->
-  <div class="bottom">
-    <div class="bottom-contact">
-      <div class="contact-title">联系方式</div>
-      <div class="contact-message">邮箱：klaushu@outlook.com</div>
-    </div>
-    <div class="bottom-line"></div>
-    <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-  </div>
-
-  <!-- JavaScript -->
-  <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/main.js"></script>
-</body>
-
+    <!-- JavaScript -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
