--- a/algorithm.html
+++ b/algorithm.html
@@ -133,6 +133,17 @@
         </div>
         <div class="single-content">
           <a>
+            <div>哈希表法</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/算法/哈希表法/两数之和.js"
+            target="_blank"
+          >
+            <div>两数之和</div>
+          </a>
+        </div>
+        <div class="single-content">
+          <a>
             <div>双指针法</div>
           </a>
           <a
@@ -140,6 +151,12 @@
             target="_blank"
           >
             <div>盛最多水的容器</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/算法/双指针法/三数之和.js"
+            target="_blank"
+          >
+            <div>三数之和</div>
           </a>
         </div>
         <div class="single-content">
