--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
   </div>
 
   <!-- home-ins -->
-  <div class="home-ins home-ins-other" style="height: 390px;">
+  <div class="home-ins home-ins-other" style="position:relative;height: 390px;top: -40px;">
     <div class="ins-content" style="text-align: center;">
       <div style="font-size: 45px; margin-bottom: 20px; line-height: 42px">
         敬请期待
