--- a/projects.html
+++ b/projects.html
@@ -1,109 +1,165 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body class="body-style">
+    <div class="news news-golden">
+      <div class="news-text">更新时间：</div>
+    </div>
 
-<body class="body-style">
-  <div class="news news-golden">
-    <div class="news-text">更新时间：</div>
-  </div>
+    <!-- navigation -->
+    <div class="navigation navigation-grey">
+      <!-- 横版 -->
+      <div class="navigation-content">
+        <div class="navigation-choice">
+          <a href="index.html" class="logo logo-white">
+            <div>Hu</div>
+          </a>
+          <a href="study-notes.html">
+            <div class="choice choice-home">学习笔记</div>
+          </a>
+          <a href="skills.html">
+            <div class="choice choice-home">专业技能</div>
+          </a>
+          <a href="projects.html">
+            <div class="choice choice-home choice-focused choice-focused-white">
+              项目经历
+            </div>
+          </a>
+          <a href="about.html">
+            <div class="choice choice-home choice-focused">关于本站</div>
+          </a>
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <div class="github github-white"></div>
+          </a>
+        </div>
+        <div class="inner-header-icon">
+          <span> </span>
+          <span> </span>
+        </div>
+      </div>
+      <!-- 下拉 -->
+      <div class="dropdown dropdown-dark">
+        <div class="dropdown-line dropdown-line-white"></div>
+        <div class="dropdown-line-show dropdown-line-white-show"></div>
+        <div class="dropdown-menu dropdown-menu-white">
+          <a href="index.html">
+            <p>主页</p>
+          </a>
+          <hr />
+          <a href="study-notes.html">
+            <p>学习笔记</p>
+          </a>
+          <hr />
+          <a href="skills.html">
+            <p>专业技能</p>
+          </a>
+          <hr />
+          <a href="projects.html">
+            <p>项目经历</p>
+          </a>
+          <hr />
+          <a href="about.html">
+            <p>关于本站</p>
+          </a>
+          <hr />
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <p>GitHub</p>
+          </a>
+          <hr />
+        </div>
+      </div>
+    </div>
 
-  <!-- navigation -->
-  <div class="navigation navigation-grey">
-    <!-- 横版 -->
-    <div class="navigation-content">
-      <div class="navigation-choice">
-        <a href="index.html" class="logo logo-white">
-          <div>Hu</div>
-        </a>
-        <a href="study-notes.html">
-          <div class="choice choice-home">学习笔记</div>
-        </a>
-        <a href="skills.html">
-          <div class="choice choice-home">专业技能</div>
-        </a>
-        <a href="projects.html">
-          <div class="choice choice-home choice-focused choice-focused-white">
-            项目经历
+    <!-- home-ins -->
+    <div class="home-ins home-ins-other" style="position: relative; top: -40px">
+      <div class="projects">
+        <div class="single-project">
+          <div class="timeline">
+            <div class="ball top-ball"></div>
+            <div class="timeline-line" style="height: 890px;"></div>
+            <div class="ball bottom-ball"></div>
           </div>
-        </a>
-        <a href="about.html">
-          <div class="choice choice-home choice-focused">关于本站</div>
-        </a>
-        <a href="https://github.com/zanlaihu" target="_blank">
-          <div class="github github-white"></div>
-        </a>
-      </div>
-      <div class="inner-header-icon">
-        <span> </span>
-        <span> </span>
+          <div class="single-project-time">
+            <div>2021年12月</div>
+            <div style="height: 870px"></div>
+            <div>2020年12月</div>
+          </div>
+          <div class="single-project-content">
+            <div class="single-project-content-text">
+              <div class="single-project-content-title">代号：Promise</div>
+              <h1>技术架构</h1>
+              前端：Angular(version 11) + Typescript、Akita、ionic、node.js<br />
+              后端：SpringBoot + Java、MySql<br />
+              <h2>Angular</h2>
+              Angular 是一个基于 TypeScript
+              构建的开发平台，用于创建单页面应用。它包括：<br />
+              1. 一个基于组件的框架，用于构建可伸缩的 Web 应用。<br />
+              2.
+              一组丰富的库，涵盖各种功能，包括路由、表单管理、客户端-服务器通信等。<br />
+              3. 一套开发工具，可帮助开发、构建、测试和更新代码。<br />
+              <h2>Typscript</h2>
+              Typscript是基于JavaScript构建的开源语言。它是进行Angular应用开发的推荐语言。<br />
+              <h2>Akita</h2>
+              Akita是类似redux的状态管理工具。甚至可以在Chrome的redux插件中查看其状态变更。<br />
+              <h2>ionic</h2>
+              适用于Angular的UI组件库，类似element-UI。<br />
+              <h2>业务</h2>
+              Promise是用于贷款业务的金融项目。本项目由埃森哲全权设计并开发。<br />
+              <h2>职责</h2>
+              前端：【用户信息变更】【还款】【付款信息登入】相关的一系列页面、【银行账户输入】共通组件、邮编检索弹窗等的开发。<br />
+            </div>
+          </div>
+        </div>
+        <div class="single-project">
+          <div class="timeline">
+            <div class="ball top-ball"></div>
+            <div class="timeline-line" style="height: 400px;"></div>
+            <div class="ball bottom-ball"></div>
+          </div>
+          <div class="single-project-time">
+            <div>2020年5月</div>
+            <div style="height: 380px"></div>
+            <div>2020年12月</div>
+          </div>
+          <div class="single-project-content">
+            <div class="single-project-content-text">
+              <div class="single-project-content-title">EDSP</div>
+              <h1>技术架构</h1>
+              前端：Angular(version 11) + Typescript、Akita、ionic、node.js<br />
+              后端：SpringBoot + Java、MySql<br />
+              与Promise一致。<br />
+              <h2>业务</h2>
+              EDSP是一个保险相关的金融项目。本项目由埃森哲全权设计并开发。<br />
+              <h2>职责</h2>
+              前端：【取消/解约】、【付款】相关一系列页面开发。【信用卡支付】通用组件的开发。<br />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <!-- 下拉 -->
-    <div class="dropdown dropdown-dark">
-      <div class="dropdown-line dropdown-line-white"></div>
-      <div class="dropdown-line-show dropdown-line-white-show"></div>
-      <div class="dropdown-menu dropdown-menu-white">
-        <a href="index.html">
-          <p>主页</p>
-        </a>
-        <hr />
-        <a href="study-notes.html">
-          <p>学习笔记</p>
-        </a>
-        <hr />
-        <a href="skills.html">
-          <p>专业技能</p>
-        </a>
-        <hr />
-        <a href="projects.html">
-          <p>项目经历</p>
-        </a>
-        <hr />
-        <a href="about.html">
-          <p>关于本站</p>
-        </a>
-        <hr />
-        <a href="https://github.com/zanlaihu" target="_blank">
-          <p>GitHub</p>
-        </a>
-        <hr />
+
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaushu@outlook.com</div>
       </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
-  </div>
 
-  <!-- home-ins -->
-  <div class="home-ins home-ins-other" style="position:relative;height: 390px;top: -40px;">
-    <div class="ins-content" style="text-align: center">
-      <div style="font-size: 45px; margin-bottom: 20px; line-height: 42px">
-        敬请期待
-      </div>
-      <!-- <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div> -->
-    </div>
-  </div>
-
-  <div class="about-content" style="height: 500px"></div>
-  </div>
-
-  <!-- bottom -->
-  <div class="bottom">
-    <div class="bottom-contact">
-      <div class="contact-title">联系方式</div>
-      <div class="contact-message">邮箱：klaushu@outlook.com</div>
-    </div>
-    <div class="bottom-line"></div>
-    <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-  </div>
-
-  <!-- JavaScript -->
-  <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/main.js"></script>
-</body>
-
+    <!-- JavaScript -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
