--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@
           </div>
           <div class="single-project-content">
             <div class="single-project-content-text">
-              <div class="single-project-content-title">EDSP</div>
+              <div class="single-project-content-title">代号：EDSP</div>
               <h1>技术架构</h1>
               前端：Angular(version 11) + Typescript、Akita、ionic、node.js<br />
               后端：SpringBoot + Java、MySql<br />
