--- a/projects.html
+++ b/projects.html
@@ -83,10 +83,11 @@
     <!-- home-ins -->
     <div class="home-ins home-ins-other" style="position: relative; top: -40px">
       <div class="projects">
+        <div class="project-year">- 2021 -</div>
         <div class="single-project">
           <div class="timeline">
             <div class="ball top-ball"></div>
-            <div class="timeline-line" style="height: 890px;"></div>
+            <div class="timeline-line" style="height: 890px"></div>
             <div class="ball bottom-ball"></div>
           </div>
           <div class="single-project-time">
@@ -120,10 +121,11 @@
             </div>
           </div>
         </div>
+        <div class="project-year">- 2020 -</div>
         <div class="single-project">
           <div class="timeline">
             <div class="ball top-ball"></div>
-            <div class="timeline-line" style="height: 400px;"></div>
+            <div class="timeline-line" style="height: 400px"></div>
             <div class="ball bottom-ball"></div>
           </div>
           <div class="single-project-time">
