--- a/personal-projects.html
+++ b/personal-projects.html
@@ -84,17 +84,15 @@
     <div class="home-ins home-ins-other" style="position: relative; top: -40px">
       <div class="project-nav">
         <a href="./projects.html"
-          ><div class="project-label project-label-underline">
-            企业级项目
-          </div></a
+          ><div class="project-label">企业级项目</div></a
         >
         <a href="./personal-projects.html"
-          ><div class="project-label">个人项目</div></a
+          ><div class="project-label project-label-underline">个人项目</div></a
         >
       </div>
       <div class="projects">
-        <div class="project-year">- 2021 -</div>
-        <div class="single-project">
+        <div class="project-year">- 待完善 -</div>
+        <!-- <div class="single-project">
           <div class="timeline">
             <div class="ball top-ball"></div>
             <div class="timeline-line" style="height: 900px"></div>
@@ -130,9 +128,9 @@
               前端：【用户信息变更】【还款】【付款信息登入】相关的一系列页面、【银行账户输入】共通组件、邮编检索弹窗等的开发。<br />
             </div>
           </div>
-        </div>
-        <div class="project-year">- 2020 -</div>
-        <div class="single-project">
+        </div> -->
+        <!-- <div class="project-year">- 2020 -</div> -->
+        <!-- <div class="single-project">
           <div class="timeline">
             <div class="ball top-ball"></div>
             <div class="timeline-line" style="height: 400px"></div>
@@ -156,7 +154,7 @@
               前端：【取消/解约】、【付款】相关一系列页面开发。【信用卡支付】通用组件的开发。<br />
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
