--- a/projects.html
+++ b/projects.html
@@ -113,11 +113,8 @@
               后端：SpringBoot + Java、MySql<br />
               <h2>Angular</h2>
               Angular 是一个基于 TypeScript
-              构建的开发平台，用于创建单页面应用。它包括：<br />
-              1. 一个基于组件的框架，用于构建可伸缩的 Web 应用。<br />
-              2.
-              一组丰富的库，涵盖各种功能，包括路由、表单管理、客户端-服务器通信等。<br />
-              3. 一套开发工具，可帮助开发、构建、测试和更新代码。<br />
+              构建的开发平台，用于创建单页面应用。<br />
+
               <h2>Typscript</h2>
               Typscript是基于JavaScript构建的开源语言。它是进行Angular应用开发的推荐语言。<br />
               <h2>Akita</h2>
@@ -127,7 +124,11 @@
               <h2>业务</h2>
               Promise是用于贷款业务的金融项目。本项目由埃森哲全权设计并开发。<br />
               <h2>职责</h2>
-              前端：【用户信息变更】【还款】【付款信息登入】相关的一系列页面、【银行账户输入】共通组件、邮编检索弹窗等的开发。<br />
+              1. 沟通、分析需求并制定软件开发方案。 <br />
+              2. 前端样式制作、新页面及通用组件开发、旧画面改修及对应项目遗留
+              BUG。<br />
+              3. 配合后端完成 API 调试，疏通接口。配合测试团队完成测试。 <br />
+              4. 对新入职的应届生进行培训并review新人代码。<br />
             </div>
           </div>
         </div>
@@ -135,13 +136,13 @@
         <div class="single-project">
           <div class="timeline">
             <div class="ball top-ball"></div>
-            <div class="timeline-line" style="height: 400px"></div>
+            <div class="timeline-line" style="height: 430px"></div>
             <div class="ball bottom-ball"></div>
           </div>
           <div class="single-project-time">
-            <div>2020年5月</div>
-            <div style="height: 380px"></div>
             <div>2020年12月</div>
+            <div style="height: 410px"></div>
+            <div>2020年5月</div>
           </div>
           <div class="single-project-content">
             <div class="single-project-content-text">
@@ -153,7 +154,9 @@
               <h2>业务</h2>
               EDSP是一个保险相关的金融项目。本项目由埃森哲全权设计并开发。<br />
               <h2>职责</h2>
-              前端：【取消/解约】、【付款】相关一系列页面开发。【信用卡支付】通用组件的开发。<br />
+              1. 沟通、分析需求并制定软件开发方案。 <br />
+              2. 新页面及通用组件开发，旧页面维护。<br />
+              3. 配合后端完成 API 调试，疏通接口。配合测试团队完成测试。 <br />
             </div>
           </div>
         </div>
