--- a/about-me.html
+++ b/about-me.html
@@ -83,38 +83,25 @@
   <!-- home-ins -->
   <div class="home-ins home-ins-other" style="position: relative; top: -40px">
     <div class="project-nav">
-      <a href="./about.html"></a>
-      <div class="project-label project-label-underline">
-        关于本站
-      </div>
-      </a>
-      <a href="./about-me.html">
-        <div class="project-label">关于我</div>
-      </a>
+      <a href="./about.html"
+        ><div class="project-label project-label-underline">
+          关于本站
+        </div></a
+      >
+      <a href="./about-me.html"
+        ><div class="project-label">关于我</div></a
+      >
     </div>
     <div class="projects">
-      <div class="project-year">- 小站的诞生 -</div>
-      <div class="single-project">
-        <div class="single-project-content">
-          <div class="single-project-content-text">
-            小站起源于一个目录，也就是现在的<a href="./study-notes.html" class="about-link">学习笔记</a>页面。<br />
-            做好以后感觉很方便，就想着可以加上更多有用的画面，于是页面就越加越多，并且目前也不断将笔记添加进来。<br /><br />
-            这个小站由我独立设计制作而成，如果觉得UI设计的好看，可至GitHub下载：<br />
-            <a href="https://github.com/zanlaihu/blog/tree/gh-pages" class="about-link"
-              target="_blank">https://github.com/zanlaihu/blog/tree/gh-pages</a><br />
-          </div>
-        </div>
-      </div>
-      <div class="project-year">- 小站的架构 -</div>
-      <div class="single-project">
-        <div class="single-project-content">
-          <div class="single-project-content-text">
-            小站采用原生JS/CSS/HTML + jQuery制作。
-            通过Github Pages进行发布。
-          </div>
-        </div>
-      </div>
+      <div class="project-year">- 待补充 -</div>
+
+
     </div>
+  </div>
+
+  <div class="about-content" style="height: 500px;">
+  </div>
+
   </div>
 
   <!-- bottom -->
