--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
             <div style="height: 685px"></div>
             <div>2020年12月</div>
           </div>
-          <div class="single-project-content">
+          <div class="single-project-content single-project-content-width">
             <div class="single-project-content-text">
               <div class="single-project-content-title">代号：Promise</div>
               <h1>技术架构</h1>
@@ -144,7 +144,7 @@
             <div style="height: 405px"></div>
             <div>2020年5月</div>
           </div>
-          <div class="single-project-content">
+          <div class="single-project-content single-project-content-width">
             <div class="single-project-content-text">
               <div class="single-project-content-title">代号：EDSP</div>
               <h1>技术架构</h1>
