--- a/study-notes.html
+++ b/study-notes.html
@@ -269,7 +269,24 @@
               href="https://juejin.cn/post/6979223517866754084/"
               target="_blank"
             >
-              <div>6 列表&key</div>
+              <div>
+                6 列表&key
+                <p
+                  style="
+                    margin-left: 5px;
+                    color: rgb(156, 74, 250);
+                    font-size: 15px;
+                    font-weight: 600;
+                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
+                      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+                      'Helvetica Neue', sans-serif;
+                    font-style: italic;
+                    float: right;
+                  "
+                >
+                  NEW!!!
+                </p>
+              </div>
             </a>
           </div>
           <div class="single-content">
