--- a/about.html
+++ b/about.html
@@ -1,135 +1,139 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div class="news news-golden">
-    <div class="news-text">更新时间：</div>
-  </div>
-
-  <!-- navigation -->
-  <div class="navigation navigation-grey">
-    <!-- 横版 -->
-    <div class="navigation-content">
-
-      <div class="navigation-choice">
-
-        <a href="index.html" class="logo logo-white">
-          <div>Hu</div>
-        </a>
-        <a href="study-notes.html">
-          <div class="choice choice-home">学习笔记</div>
-        </a>
-        <a href="skills.html">
-          <div class="choice choice-home">专业技能</div>
-        </a>
-        <a href="projects.html">
-          <div class="choice choice-home">项目经历</div>
-        </a>
-        <a href="about.html">
-          <div class="choice choice-home choice-focused choice-focused-white">
-            关于本站
-          </div>
-        </a>
-        <a href="https://github.com/zanlaihu" target="_blank">
-          <div class="github github-white"></div>
-        </a>
-      </div>
-      <div class="inner-header-icon">
-        <span> </span>
-        <span> </span>
-      </div>
+  <body class="body-style">
+    <div class="news news-golden">
+      <div class="news-text">更新时间：</div>
     </div>
-    <!-- 下拉 -->
-    <div class="dropdown dropdown-dark">
-      <div class="dropdown-line dropdown-line-white"></div>
-      <div class="dropdown-line-show dropdown-line-white-show"></div>
-      <div class="dropdown-menu dropdown-menu-white">
-        <a href="index.html">
-          <p>主页</p>
-        </a>
-        <hr />
-        <a href="study-notes.html">
-          <p>学习笔记</p>
-        </a>
-        <hr />
-        <a href="skills.html">
-          <p>专业技能</p>
-        </a>
-        <hr />
-        <a href="projects.html">
-          <p>项目经历</p>
-        </a>
-        <hr />
-        <a href="about.html">
-          <p>关于本站</p>
-        </a>
-        <hr />
-        <a href="https://github.com/zanlaihu" target="_blank">
-          <p>GitHub</p>
-        </a>
-        <hr />
-      </div>
-    </div>
-  </div>
 
-  <!-- home-ins -->
-  <div class="home-ins home-ins-other" style="position: relative; top: -40px">
-    <div class="project-nav">
-      <a href="./about.html"></a>
-      <div class="project-label project-label-underline">
-        关于本站
-      </div>
-      </a>
-      <a href="./about-me.html">
-        <div class="project-label">关于我</div>
-      </a>
-    </div>
-    <div class="projects">
-      <div class="project-year">- 小站的诞生 -</div>
-      <div class="single-project">
-        <div class="single-project-content">
-          <div class="single-project-content-text">
-            小站起源于一个目录，也就是现在的<a href="./study-notes.html" class="about-link">学习笔记</a>页面。<br />
-            做好以后感觉很方便，就想着可以加上更多有用的画面，于是页面就越加越多，并且目前也不断将笔记添加进来。<br /><br />
-            这个小站由我独立设计制作而成，如果觉得UI设计的好看，可至GitHub下载：<br />
-            <a href="https://github.com/zanlaihu/blog/tree/gh-pages" class="about-link"
-              target="_blank">https://github.com/zanlaihu/blog/tree/gh-pages</a><br />
-          </div>
+    <!-- navigation -->
+    <div class="navigation navigation-grey">
+      <!-- 横版 -->
+      <div class="navigation-content">
+        <div class="navigation-choice">
+          <a href="index.html" class="logo logo-white">
+            <div>Hu</div>
+          </a>
+          <a href="study-notes.html">
+            <div class="choice choice-home">学习笔记</div>
+          </a>
+          <a href="skills.html">
+            <div class="choice choice-home">专业技能</div>
+          </a>
+          <a href="projects.html">
+            <div class="choice choice-home">项目经历</div>
+          </a>
+          <a href="about.html">
+            <div class="choice choice-home choice-focused choice-focused-white">
+              关于本站
+            </div>
+          </a>
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <div class="github github-white"></div>
+          </a>
+        </div>
+        <div class="inner-header-icon">
+          <span> </span>
+          <span> </span>
         </div>
       </div>
-      <div class="project-year">- 小站的架构 -</div>
-      <div class="single-project">
-        <div class="single-project-content">
-          <div class="single-project-content-text">
-            小站采用原生JS/CSS/HTML + jQuery制作。
-            通过Github Pages进行发布。
-          </div>
+      <!-- 下拉 -->
+      <div class="dropdown dropdown-dark">
+        <div class="dropdown-line dropdown-line-white"></div>
+        <div class="dropdown-line-show dropdown-line-white-show"></div>
+        <div class="dropdown-menu dropdown-menu-white">
+          <a href="index.html">
+            <p>主页</p>
+          </a>
+          <hr />
+          <a href="study-notes.html">
+            <p>学习笔记</p>
+          </a>
+          <hr />
+          <a href="skills.html">
+            <p>专业技能</p>
+          </a>
+          <hr />
+          <a href="projects.html">
+            <p>项目经历</p>
+          </a>
+          <hr />
+          <a href="about.html">
+            <p>关于本站</p>
+          </a>
+          <hr />
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <p>GitHub</p>
+          </a>
+          <hr />
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- bottom -->
-  <div class="bottom">
-    <div class="bottom-contact">
-      <div class="contact-title">联系方式</div>
-      <div class="contact-message">邮箱：klaushu@outlook.com</div>
+    <!-- home-ins -->
+    <div class="home-ins home-ins-other" style="position: relative; top: -40px">
+      <div class="project-nav">
+        <a href="./about.html"></a>
+        <div class="project-label project-label-underline">关于本站</div>
+        <a href="./about-me.html">
+          <div class="project-label">关于我</div>
+        </a>
+      </div>
+      <div class="projects">
+        <div class="project-year">- 小站的诞生 -</div>
+        <div class="single-project">
+          <div class="single-project-content single-project-content-width">
+            <div class="single-project-content-text">
+              小站起源于一个目录，也就是现在的<a
+                href="./study-notes.html"
+                class="about-link"
+                >学习笔记</a
+              >页面。<br />
+              做好以后感觉很方便，就想着可以加上更多有用的画面，于是页面就越加越多，并且目前也不断将笔记添加进来。<br /><br />
+              这个小站由我独立设计制作而成，如果觉得UI设计的好看，可至GitHub下载：<br />
+              <a
+                href="https://github.com/zanlaihu/blog/tree/gh-pages"
+                class="about-link"
+                target="_blank"
+                >https://github.com/zanlaihu/blog/tree/gh-pages</a
+              ><br />
+            </div>
+          </div>
+        </div>
+        <div class="project-year">- 小站的架构 -</div>
+        <div class="single-project">
+          <div class="single-project-content single-project-content-width">
+            <div class="single-project-content-text">
+              小站采用原生JS/CSS/HTML + jQuery制作。 使用免费的Github
+              Pages进行发布，唯一的问题是国内访问可能需要VPN。
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="bottom-line"></div>
-    <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-  </div>
 
-  <!-- JavaScript -->
-  <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/main.js"></script>
-</body>
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaushu@outlook.com</div>
+      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    </div>
 
+    <!-- JavaScript -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
