--- a/algorithm.html
+++ b/algorithm.html
@@ -158,6 +158,12 @@
           >
             <div>三数之和</div>
           </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/%E7%AE%97%E6%B3%95/%E5%8F%8C%E6%8C%87%E9%92%88%E6%B3%95/%E6%9C%80%E6%8E%A5%E8%BF%91%E7%9A%84%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.js"
+            target="_blank"
+          >
+            <div>最接近的三数之和</div>
+          </a>
         </div>
         <div class="single-content">
           <a>
