--- a/about.html
+++ b/about.html
@@ -98,9 +98,9 @@
                 href="./study-notes.html"
                 class="about-link"
                 >学习笔记</a
-              >页面。<br />
+              >页面。<br /><br />
               做好以后感觉很方便，就想着可以加上更多有用的画面，于是页面就越加越多，并且目前也不断将笔记添加进来。<br /><br />
-              这个小站由我独立设计制作而成，如果觉得UI设计的好看，可至GitHub下载：<br />
+              小站由我独立设计制作，完全开源。如果觉得UI设计好看，可至GitHub下载源代码：<br />
               <a
                 href="https://github.com/zanlaihu/blog/tree/gh-pages"
                 class="about-link"
@@ -114,7 +114,7 @@
         <div class="single-project">
           <div class="single-project-content single-project-content-width">
             <div class="single-project-content-text">
-              小站采用原生JS/CSS/HTML + jQuery制作。 使用免费的Github
+              小站采用原生JS/CSS/HTML + jQuery制作。 <br />使用免费的Github
               Pages进行发布，唯一的问题是国内访问可能需要VPN。
             </div>
           </div>
