--- a/study-notes.html
+++ b/study-notes.html
@@ -147,16 +147,16 @@
             <div>11 对象：理解对象</div>
           </a>
           <a href="https://juejin.cn/post/6953505088673415176" target="_blank">
-            <div>12 操作符：一元、加性、乘性、指数</div>
+            <div>12 操作符(运算符)：一元、加性、乘性、指数</div>
           </a>
           <a href="https://juejin.cn/post/6976235815944880141" target="_blank">
-            <div>13 操作符：布尔、相等、关系</div>
+            <div>13 操作符(运算符)：布尔、相等、关系</div>
           </a>
           <a href="https://juejin.cn/post/6976241341084729351" target="_blank">
-            <div>14 操作符： 条件、逗号、赋值</div>
+            <div>14 操作符(运算符)： 条件、逗号、赋值</div>
           </a>
           <a href="https://juejin.cn/post/6976240808080965663" target="_blank">
-            <div>15 操作符：位操作符</div>
+            <div>15 操作符(运算符)：位操作符</div>
           </a>
           <a href="https://juejin.cn/post/6955446562768027685" target="_blank">
             <div>16 语句</div>
