--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
           </div>
           <div class="single-project-content single-project-content-width">
             <div class="single-project-content-text">
-              <div class="single-project-content-title">代号：Promise</div>
+              <div class="single-project-content-title">代号：P</div>
               <h1>技术架构</h1>
               前端：Angular(version 11) + Typescript、Akita、ionic、node.js<br />
               后端：SpringBoot + Java、MySql<br />
@@ -146,7 +146,7 @@
           </div>
           <div class="single-project-content single-project-content-width">
             <div class="single-project-content-text">
-              <div class="single-project-content-title">代号：EDSP</div>
+              <div class="single-project-content-title">代号：E</div>
               <h1>技术架构</h1>
               前端：Angular(version 11) + Typescript、Akita、ionic、node.js<br />
               后端：SpringBoot + Java、MySql<br />
