--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-other" style="position: relative; top: -40px">
+    <div class="home-ins home-ins-other fill-top">
       <div class="project-nav">
         <a href="./projects.html"
           ><div class="project-label project-label-underline">
