--- a/about-me.html
+++ b/about-me.html
@@ -81,7 +81,7 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-other" style="position: relative; top: -40px">
+    <div class="home-ins home-ins-other fill-top" >
       <div class="project-nav">
         <a href="./about.html"><div class="project-label">关于本站</div></a>
         <a href="./about-me.html"
