--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-other" style="position: relative; top: -40px">
+    <div class="home-ins home-ins-other fill-top" >
       <div class="project-nav">
         <a href="./about.html"></a>
         <div class="project-label project-label-underline">关于本站</div>
