--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
   </head>
 
   <body class="body-style">
-    <div class="news news-golden">
+    <div class="news news-dreamy">
       <div class="news-text">更新时间：</div>
     </div>
 
@@ -82,8 +82,7 @@
 
     <!-- home-ins -->
     <div
-      class="home-ins home-ins-other"
-      style="position: relative; height: 390px; top: -40px"
+      class="home-ins"
     >
     </div>
 
