--- a/skills.html
+++ b/skills.html
@@ -80,10 +80,9 @@
       </div>
     </div>
 
-    <!-- home-ins -->
-    <div
-      class="home-ins"
-    >
+    <div style="color: black;">
+      <!-- <div>胡赞来</div> -->
+      <div style="font-size: 50px;text-align: center;margin-top: 200px;margin-bottom: 200px;">添加中，敬请期待</div>
     </div>
 
     <!-- bottom -->
