--- a/study-notes.html
+++ b/study-notes.html
@@ -175,6 +175,9 @@
           <a href="https://juejin.cn/post/6949853697857814542/" target="_blank">
             <div>2 CSS基础</div>
           </a>
+          <a href="https://juejin.cn/post/6990375870321934372/" target="_blank">
+            <div>3 CSS选择器</div>
+          </a>
           <!-- <a>
           <div>3 添加样式</div>
         </a> -->
