--- a/study-notes.html
+++ b/study-notes.html
@@ -214,7 +214,7 @@
             <div>弹性盒子</div>
           </a>
           <a target="_blank">
-            <div>多媒体查询</div>
+            <div>媒体查询</div>
           </a>
           <a target="_blank">
             <div>自定义字体</div>
