--- a/study-notes.html
+++ b/study-notes.html
@@ -176,16 +176,16 @@
             <div>2 CSS基础</div>
           </a>
           <a href="https://juejin.cn/post/6990375870321934372/" target="_blank">
-            <div>3 CSS选择器</div>
-          </a>
-          <!-- <a>
-          <div>3 添加样式</div>
-        </a> -->
-          <a>
-            <div>伪类(Pseudo-classes)</div>
+            <div>3 选择器（selectors）</div>
           </a>
           <a>
-            <div>盒子模型</div>
+            <div>4 伪类（Pseudo-classes）</div>
+          </a>
+          <a>
+            <div>5 盒子模型</div>
+          </a>
+          <a href="https://juejin.cn/post/6990586252193955854/" target="_blank">
+            <div>正常布局流</div>
           </a>
           <a>
             <div>fonts</div>
