--- a/study-notes.html
+++ b/study-notes.html
@@ -182,7 +182,7 @@
             <div>4 伪类（Pseudo-classes）</div>
           </a>
           <a>
-            <div>5 盒子模型</div>
+            <div>5 盒模型（The box model）</div>
           </a>
           <a href="https://juejin.cn/post/6990586252193955854/" target="_blank">
             <div>正常布局流</div>
