--- a/study-notes.html
+++ b/study-notes.html
@@ -176,13 +176,13 @@
             <div>2 CSS基础</div>
           </a>
           <a href="https://juejin.cn/post/6990375870321934372/" target="_blank">
-            <div>3 选择器（selectors）</div>
+            <div>3 选择器（Selectors）</div>
           </a>
           <a>
             <div>4 伪类（Pseudo-classes）</div>
           </a>
-          <a>
-            <div>5 盒模型（The box model）</div>
+          <a href="https://juejin.cn/post/6990651102924374053/" target="_blank">
+            <div>5 盒模型（The Box Model）</div>
           </a>
           <a href="https://juejin.cn/post/6990586252193955854/" target="_blank">
             <div>正常布局流</div>
