--- a/study-notes.html
+++ b/study-notes.html
@@ -161,6 +161,9 @@
           <a href="https://juejin.cn/post/6955446562768027685" target="_blank">
             <div>16 语句</div>
           </a>
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/概念/函数合成与函数柯里化.md" target="_blank">
+            <div>函数合成与柯里化</div>
+          </a>
           <a href="https://juejin.cn/post/6946067176214233124" target="_blank">
             <div>JavaScript问题汇总</div>
           </a>
