--- a/study-notes.html
+++ b/study-notes.html
@@ -108,6 +108,78 @@
     <div class="full-index">
       <div class="full-index-title"></div>
       <div class="full-index-content">
+        <div class="full-index-content">
+          <div class="single-content-title">MVVM</div>
+          <div class="single-content">
+            <a>
+              <div>React</div>
+            </a>
+            <a
+              href="https://juejin.cn/post/6961048690903973896/"
+              target="_blank"
+            >
+              <div>1 什么是React</div>
+            </a>
+            <a
+              href="https://juejin.cn/post/6977370372333109256"
+              target="_blank"
+            >
+              <div>2 组件&props</div>
+            </a>
+            <a
+              href="https://juejin.cn/post/6978073442587246600"
+              target="_blank"
+            >
+              <div>3 生命周期&state</div>
+            </a>
+            <a
+              href="https://juejin.cn/post/6978359617017348127/"
+              target="_blank"
+            >
+              <div>4 事件处理</div>
+            </a>
+            <a
+              href="https://juejin.cn/post/6979028111014756366/"
+              target="_blank"
+            >
+              <div>5 条件渲染</div>
+            </a>
+            <a
+              href="https://juejin.cn/post/6979223517866754084/"
+              target="_blank"
+            >
+              <div>
+                6 列表&key
+                <!-- <p
+                  style="
+                    margin-left: 5px;
+                    color: rgb(156, 74, 250);
+                    font-size: 15px;
+                    font-weight: 600;
+                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
+                      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+                      'Helvetica Neue', sans-serif;
+                    font-style: italic;
+                    float: right;
+                  "
+                >
+                  NEW!!!
+                </p> -->
+              </div>
+            </a>
+          </div>
+          <div class="single-content">
+            <a target="">
+              <div>Angular</div>
+            </a>
+            <a
+              href="https://github.com/zanlaihu/study-notes/blob/main/Angular/双向绑定实现原理.md"
+              target="_blank"
+            >
+              <div>1 双向绑定实现原理</div>
+            </a>
+          </div>
+        </div>
         <div class="single-content-title">基础</div>
         <div class="single-content">
           <a href="" target="_blank">
@@ -161,7 +233,10 @@
           <a href="https://juejin.cn/post/6955446562768027685" target="_blank">
             <div>16 语句</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/概念/函数合成与函数柯里化.md" target="_blank">
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/概念/函数合成与函数柯里化.md"
+            target="_blank"
+          >
             <div>函数合成与柯里化</div>
           </a>
           <a href="https://juejin.cn/post/6946067176214233124" target="_blank">
@@ -190,20 +265,11 @@
           <a href="https://juejin.cn/post/6990586252193955854/" target="_blank">
             <div>正常布局流</div>
           </a>
-          <a>
-            <div>fonts</div>
-          </a>
-          <a>
-            <div>position</div>
-          </a>
           <a
             href="https://github.com/zanlaihu/study-notes/blob/main/CSS/display.md"
             target="_blank"
           >
             <div>display</div>
-          </a>
-          <a>
-            <div>float</div>
           </a>
           <a>
             <div>linear-gradient</div>
@@ -232,84 +298,7 @@
             <div>word-wrap</div>
           </a>
         </div>
-        <div class="full-index-content">
-          <div class="single-content-title">前端框架</div>
-          <div class="single-content">
-            <a>
-              <div>React</div>
-            </a>
-            <a
-              href="https://juejin.cn/post/6961048690903973896/"
-              target="_blank"
-            >
-              <div>1 什么是React</div>
-            </a>
-            <a
-              href="https://juejin.cn/post/6977370372333109256"
-              target="_blank"
-            >
-              <div>2 组件&props</div>
-            </a>
-            <a
-              href="https://juejin.cn/post/6978073442587246600"
-              target="_blank"
-            >
-              <div>3 生命周期&state</div>
-            </a>
-            <a
-              href="https://juejin.cn/post/6978359617017348127/"
-              target="_blank"
-            >
-              <div>4 事件处理</div>
-            </a>
-            <a
-              href="https://juejin.cn/post/6979028111014756366/"
-              target="_blank"
-            >
-              <div>5 条件渲染</div>
-            </a>
-            <a
-              href="https://juejin.cn/post/6979223517866754084/"
-              target="_blank"
-            >
-              <div>
-                6 列表&key
-                <p
-                  style="
-                    margin-left: 5px;
-                    color: rgb(156, 74, 250);
-                    font-size: 15px;
-                    font-weight: 600;
-                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
-                      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-                      'Helvetica Neue', sans-serif;
-                    font-style: italic;
-                    float: right;
-                  "
-                >
-                  NEW!!!
-                </p>
-              </div>
-            </a>
-          </div>
-          <div class="single-content">
-            <a target="">
-              <div>Angular</div>
-            </a>
-            <a
-              href="https://github.com/zanlaihu/study-notes/blob/main/Angular/1%20%E4%BB%80%E4%B9%88%E6%98%AFAngular.md"
-              target="_blank"
-            >
-              <div>1 什么是Angular</div>
-            </a>
-            <a
-              href="https://github.com/zanlaihu/study-notes/blob/main/Angular/2%20%E7%BB%84%E4%BB%B6.md"
-              target="_blank"
-            >
-              <div>2 组件</div>
-            </a>
-          </div>
-        </div>
+
         <div class="full-index-content">
           <div class="single-content-title">前端技术/库</div>
 
