--- a/study-notes.html
+++ b/study-notes.html
@@ -195,43 +195,31 @@
             <div>3 语法</div>
           </a>
           <a href="https://juejin.cn/post/6941231089356800031" target="_blank">
-            <div>4 变量声明：var、let、const</div>
+            <div>4 变量声明</div>
           </a>
-          <a href="https://juejin.cn/post/6943151642397114405" target="_blank">
-            <div>5 数据类型：Undefined、Null、Boolean</div>
-          </a>
-          <a href="https://juejin.cn/post/6943536295561920542" target="_blank">
-            <div>6 数据类型：Number</div>
-          </a>
-          <a href="https://juejin.cn/post/6943890408011202596" target="_blank">
-            <div>7 数据类型：String</div>
-          </a>
-          <a href="https://juejin.cn/post/6945275867455029278" target="_blank">
-            <div>8 数据类型：Symbol(未完)</div>
-          </a>
-          <a href="https://juejin.cn/post/6945752265797926942" target="_blank">
-            <div>9 数据类型：Object之创建对象</div>
+          <a href="https://juejin.cn/post/7004740931593191461" target="_blank">
+            <div>5 数据类型</div>
           </a>
           <a href="https://juejin.cn/post/6947996704339656712" target="_blank">
-            <div>10 对象：对象的属性</div>
+            <div>6 对象：对象的属性</div>
           </a>
           <a href="https://juejin.cn/post/6948326489192906782" target="_blank">
-            <div>11 对象：理解对象</div>
+            <div>7 对象：理解对象</div>
           </a>
           <a href="https://juejin.cn/post/6953505088673415176" target="_blank">
-            <div>12 操作符(运算符)：一元、加性、乘性、指数</div>
+            <div>8 操作符(运算符)：一元、加性、乘性、指数</div>
           </a>
           <a href="https://juejin.cn/post/6976235815944880141" target="_blank">
-            <div>13 操作符(运算符)：布尔、相等、关系</div>
+            <div>9 操作符(运算符)：布尔、相等、关系</div>
           </a>
           <a href="https://juejin.cn/post/6976241341084729351" target="_blank">
-            <div>14 操作符(运算符)： 条件、逗号、赋值</div>
+            <div>10 操作符(运算符)： 条件、逗号、赋值</div>
           </a>
           <a href="https://juejin.cn/post/6976240808080965663" target="_blank">
-            <div>15 操作符(运算符)：位操作符</div>
+            <div>11 操作符(运算符)：位操作符</div>
           </a>
           <a href="https://juejin.cn/post/6955446562768027685" target="_blank">
-            <div>16 语句</div>
+            <div>12 语句</div>
           </a>
           <a
             href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/概念/函数合成与函数柯里化.md"
