--- a/journal.html
+++ b/journal.html
@@ -111,13 +111,13 @@
         <div class="single-content-title">2021</div>
         <div class="single-content">
           <a href="" target="_blank">
-            <div>6月</div>
+            <div>8月</div>
           </a>
           <a
-            href="https://github.com/zanlaihu/study-notes/blob/main/日志/2021/6/6月总结.md"
+            href=""
             target="_blank"
           >
-            <div>6月总结</div>
+            <div>跳槽了</div>
           </a>
         </div>
         <div class="single-content">
@@ -131,6 +131,19 @@
             <div>开始承担review的工作</div>
           </a>
         </div>
+        <div class="single-content">
+          <a href="" target="_blank">
+            <div>6月</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/日志/2021/6/6月总结.md"
+            target="_blank"
+          >
+            <div>6月总结</div>
+          </a>
+        </div>
+
+
       </div>
     </div>
 
